--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "scrape:countries": "tsx scripts/populateCountryData.ts"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.2",
     "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.19.1",
